# SurfaceVoronoi

./: CMakeLists.txt  README.md  compile_commands.json  geodesicVoronoi.cpp
GVD_RVD/: GVD_RVD.hpp  Main.cpp
Geodesic/: Chen_Han.cpp  Chen_Han.h  Dijkstra.cpp  Dijkstra.h  DistanceApproach.cpp  DistanceApproach.h  ExactDGPMethod.cpp  ExactDGPMethod.h  FMM.cpp  FMM.h  IntrinsicSDF.cpp  IntrinsicSDF.h  main.cpp
Model3D/: BaseModel.cpp  BaseModel.h  FacePoint.h  MAIN.cpp  Polygon2Model3D.hpp  RichModel.cpp  RichModel.h
